jwplow.github.io

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
   background-repeat: no-repeat;
   background-position: left top;
   margin: 0px;
+  background-color: #52596b;
 }
 
 #logo {
