--- a/css/style4.css
+++ b/css/style4.css
@@ -9,6 +9,7 @@ h1 {
 	text-align: center;
 	font-family: 'Georgia', sans-serif;
 	letter-spacing: 1.5px;
+	width: 400px auto;
 	font-size: 12px;
 	line-height: 150%;
 	margin: 50px;
